--- a/static/css/cssstyle.css
+++ b/static/css/cssstyle.css
@@ -1,24 +1,29 @@
 /* Estilos CSS para a página */
+
+/* Define o corpo do documento como um flex container com direção de coluna e altura mínima de 100% da viewport */
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   background-color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
+/* Estilos do cabeçalho */
 header {
   background-color: #333;
   color: white;
   padding: 10px;
 }
 
+/* Estilos da navegação lateral */
 nav {
-  float: left;
-  width: 10%;
   background-color: #fff;
-  height: calc(100vh - 175px);
-  overflow: auto;
   border-right: 1px solid #ddd;
+  overflow: auto;
+  flex: 0 0 10%; /* Define uma largura fixa de 10% */
 }
 
 ul {
@@ -44,93 +49,42 @@ li a:hover:not(.active) {
   color: #333;
 }
 
-main {
-  margin: 0;
+/* Estilos do conteúdo principal */
+.container {
+  display: flex;
+  flex-direction: column;
+  max-height: calc(80vh - 2 * 5px - 30px - 60px); /* Subtrai o espaço do header e do footer */
+}
+
+.content {
+  flex: 1;
   padding: 10px;
-  overflow: scroll;
-  height: calc(100vh - 300px); /* subtrai a altura do header e do footer */
 }
 
-
-table {
-  border-collapse: collapse;
-  width: 100%;
+form {
+  display: flex;
+  flex-direction: column;
 }
 
-th, td {
-  text-align: left;
-  padding: 8px;
+form label {
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
-th {
-  background-color: #4CAF50;
-  color: white;
-}
-
-tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-footer {
-  background-color: #333;
-  color: white;
-  padding: 10px;
-  text-align: center;
-}
-
-img {
-  width: 16px;
-  height: 16px;
-}
-input[type="checkbox"] {
-  transform: scale(1.5);
+form input[type="text"],
+form select {
+  margin-bottom: 10px;
+  padding: 5px;
 }
 
 .buttons {
   display: flex;
   justify-content: flex-end;
-  padding: 20px;
 }
 
-button {
-  background-color: #4CAF50;
-  border: none;
+/* Estilos do rodapé */
+footer {
+  background-color: #333;
   color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 4px;
+  padding: 10px;
 }
-
-button:hover {
-  background-color: #3e8e41;
-}
-
-#btn-incluir {
-  background-color: #008CBA;
-}
-
-#btn-incluir:hover {
-  background-color: #007a9b;
-}
-
-#btn-excluir {
-  background-color: #f44336;
-}
-
-#btn-excluir:hover {
-  background-color: #d32f2f;
-}
-
-#btn-editar {
-  background-color: #4CAF50;
-}
-
-#btn-editar:hover {
-  background-color: #3e8e41;
-}
-
