--- a/templates/ph/base.html
+++ b/templates/ph/base.html
@@ -1,15 +1,16 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Meu Site</title>
-    <link rel="stylesheet" href="{% static '/css/cssstyle.css' %}">
-  </head>
-  <body>
-    <header>
-      <h1>Meu Site</h1>
-    </header>
+<head>
+  <meta charset="utf-8">
+  <title>Meu Site</title>
+  <link rel="stylesheet" href="{% static '/css/cssstyle.css' %}">
+</head>
+<body>
+  <header>
+    <h1>Meu Site</h1>
+  </header>
+  <div class="container">
     <nav>
       <ul>
         <li><a href="#" class="active">Início</a></li>
@@ -17,7 +18,10 @@
         <li><a href="#">Contato</a></li>
       </ul>
     </nav>
-    {% block content %}{% endblock %}
-    {% include 'ph/partials/_footer.html' %}
-  </body>
+    <main>
+      {% block content %}{% endblock %}
+    </main>
+  </div>  
+  {% include 'ph/partials/_footer.html' %}
+</body>
 </html>
