--- a/templates/ph/partials/_footer.html
+++ b/templates/ph/partials/_footer.html
@@ -1,5 +1,5 @@
 {% load static %}
 <footer>
-    <p>Meu Site - Todos os direitos reservados.</p>
+    <p>Ping Host - Todos os direitos reservados.</p>
 </footer>
 
