--- a/templates/ph/base.html
+++ b/templates/ph/base.html
@@ -3,19 +3,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Meu Site</title>
+  <title>Ping Host</title>
   <link rel="stylesheet" href="{% static '/css/cssstyle.css' %}">
 </head>
 <body>
   <header>
-    <h1>Meu Site</h1>
+    <h1 class="titulo-principal"><a href="{% url 'index' %}" class="link-sem-decoracao">Ping Host</a></h1>
   </header>
   <div class="container">
     <nav>
       <ul>
-        <li><a href="#" class="active">Início</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="#" class="active">Hosts</a></li>
+        <li><a href="#">Mapa</a></li>
       </ul>
     </nav>
     <main>
